# synthetic-membrane

./: .gitignore  LICENSE  README.md  biological-membranes.md  blackboard-membrane.py  initial-research.md  membrane-architecture.md  swarm-membrane.py  synthetic-membrane-paper.md  wiki-index.md
mvp/: pyproject.toml
mvp/demo/: __main__.py  agent_simulation.py  benchmarks.py  requirements.txt  visualize.py
mvp/src/membrane/: __init__.py  models.py  permeability.py  server.py  store.py  swarm.py
mvp/tests/: test_coordination.py  test_event_replay.py  test_swarm_lifecycle.py  test_token_budget.py
paper/: blog-post.md  paper.md
prototypes/: protocol-spec.py
wiki/: SCHEMA.md  index.md  log.md  wiki_db.py
wiki/concepts/: actor-model-agents.md  agent-discovery-registry.md  agent-governance.md  agent-identity-cryptography.md  agent-observability.md  agent-reputation-systems.md  agent-security-trust.md  agentic-web.md  agentic-world-models.md  best-paths-forwards.md  biological-membranes.md  candidates-comparison.md  cognitive-digestion.md  collective-intelligence.md  consensus-mechanisms.md  crdt-coordination.md  event-sourcing.md  failure-attribution.md  framework-integration.md  gated-permeability.md  gossip-protocols.md  immune-inspired-defense.md  initial-research.md  latent-communication.md  mcp-efficiency-optimizations.md  membrane-architecture.md  protocol-design.md  quorum-sensing-agents.md  structured-shared-memory.md
wiki/entities/: a2a-protocol.md  abstract-chain-of-thought.md  adversarial-co-evolution.md  agent-empowerment.md  agent-token-economics.md  (+49 more)
(+50 files in other folders)
