[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "membrane"
version = "0.1.0"
description = "Synthetic Membrane — a shared permeable boundary layer for AI agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
membrane-server = "membrane.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
